# NodeWatcher-Server

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: deps.cmake
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  daemon.cpp  daemon.h  help.cpp  keygen.cpp  keygen.h
src/events/: CMakeLists.txt  event_bus.cpp  event_bus.h
src/linux/: CMakeLists.txt
src/linux/files/: api_keys.cpp  api_keys.h  paths.hpp
src/linux/modules/: light_module.cpp  light_module.h  static_resource.cpp  static_resource.h
src/linux/modules/cpu/: cpu.cpp  cpu.h
src/linux/modules/scheduler/: scheduler.cpp  scheduler.h
src/linux/modules/system/: system.cpp  system.h
src/server/: CMakeLists.txt  server.cpp  server.h  server.tpp
src/server/auth/: auth.cpp  auth.h
src/server/core/: server.cpp  server.h  server_handlers.cpp
src/server/json/: json.hpp
